@@ -11,6 +11,7 @@ This major version introduces the concept of build variants, and provides packag
 - Python : Added version 3.7.6.
 - Six : Added version 1.14.0.
 - PySetProcTitle : Added version 1.1.10.
+- Subprocess32 : Updated to version 3.5.4.
 
 1.2.0
 -----
